fix: some dark mode issues

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   --text-color-light: hsl(0, 0, 0, .56);
   --text-color-dark: hsl(0, 0, 0, .87);
   --font-inter: "Inter", sans-serif;
-  --border-color: rgba(0, 0, 0, .35)
+  --border-color: rgba(0, 0, 0, .35) --border-color-dark: rgba(255, 255, 255, .35);
 }
 
 html {
